--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -201,12 +201,16 @@ shedding {
     I:"Botania.botania:pixie.lexiconDisplaySize"=40
     I:"Botania.botania:pixie.metadata"=0
     I:"Botania.botania:pixie.rate"=-1
-
-    # Configuration of Shedding for BuildCraft|Core.bcRobot
     S:"BuildCraft|Core.bcRobot.item"=
     I:"BuildCraft|Core.bcRobot.lexiconDisplaySize"=40
     I:"BuildCraft|Core.bcRobot.metadata"=0
     I:"BuildCraft|Core.bcRobot.rate"=-1
+
+    # Configuration of Shedding for BuildCraft|Robotics.bcRobot
+    S:"BuildCraft|Robotics.bcRobot.item"=
+    I:"BuildCraft|Robotics.bcRobot.lexiconDisplaySize"=40
+    I:"BuildCraft|Robotics.bcRobot.metadata"=0
+    I:"BuildCraft|Robotics.bcRobot.rate"=-1
 
     # Configuration of Shedding for CaveSpider
     S:CaveSpider.item=
@@ -428,6 +432,12 @@ shedding {
     I:"GrimoireOfGaia.Ender Eye.metadata"=0
     I:"GrimoireOfGaia.Ender Eye.rate"=-1
 
+    # Configuration of Shedding for GrimoireOfGaia.Ender Girl
+    S:"GrimoireOfGaia.Ender Girl.item"=
+    I:"GrimoireOfGaia.Ender Girl.lexiconDisplaySize"=40
+    I:"GrimoireOfGaia.Ender Girl.metadata"=0
+    I:"GrimoireOfGaia.Ender Girl.rate"=-1
+
     # Configuration of Shedding for GrimoireOfGaia.Flesh Lich
     S:"GrimoireOfGaia.Flesh Lich.item"=
     I:"GrimoireOfGaia.Flesh Lich.lexiconDisplaySize"=40
@@ -451,6 +461,12 @@ shedding {
     I:GrimoireOfGaia.Harpy.lexiconDisplaySize=40
     I:GrimoireOfGaia.Harpy.metadata=0
     I:GrimoireOfGaia.Harpy.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Holstaurus
+    S:GrimoireOfGaia.Holstaurus.item=
+    I:GrimoireOfGaia.Holstaurus.lexiconDisplaySize=40
+    I:GrimoireOfGaia.Holstaurus.metadata=0
+    I:GrimoireOfGaia.Holstaurus.rate=-1
 
     # Configuration of Shedding for GrimoireOfGaia.Hunter
     S:GrimoireOfGaia.Hunter.item=
@@ -1144,17 +1160,33 @@ shedding {
     I:ThaumicHorizons.LunarWolf.metadata=0
     I:ThaumicHorizons.LunarWolf.rate=-1
 
+    # Configuration of Shedding for ThaumicHorizons.MeatSlime
+    S:ThaumicHorizons.MeatSlime.item=
+    I:ThaumicHorizons.MeatSlime.lexiconDisplaySize=40
+    I:ThaumicHorizons.MeatSlime.metadata=0
+    I:ThaumicHorizons.MeatSlime.rate=-1
+
+    # Configuration of Shedding for ThaumicHorizons.MercurialSlime
+    S:ThaumicHorizons.MercurialSlime.item=
+    I:ThaumicHorizons.MercurialSlime.lexiconDisplaySize=40
+    I:ThaumicHorizons.MercurialSlime.metadata=0
+    I:ThaumicHorizons.MercurialSlime.rate=-1
+
     # Configuration of Shedding for ThaumicHorizons.NetherHound
     S:ThaumicHorizons.NetherHound.item=
     I:ThaumicHorizons.NetherHound.lexiconDisplaySize=40
     I:ThaumicHorizons.NetherHound.metadata=0
     I:ThaumicHorizons.NetherHound.rate=-1
-
-    # Configuration of Shedding for ThaumicHorizons.Nightmare
     S:ThaumicHorizons.Nightmare.item=
     I:ThaumicHorizons.Nightmare.lexiconDisplaySize=40
     I:ThaumicHorizons.Nightmare.metadata=0
     I:ThaumicHorizons.Nightmare.rate=-1
+
+    # Configuration of Shedding for ThaumicHorizons.NightmareTH
+    S:ThaumicHorizons.NightmareTH.item=
+    I:ThaumicHorizons.NightmareTH.lexiconDisplaySize=40
+    I:ThaumicHorizons.NightmareTH.metadata=0
+    I:ThaumicHorizons.NightmareTH.rate=-1
 
     # Configuration of Shedding for ThaumicHorizons.OrePig
     S:ThaumicHorizons.OrePig.item=
@@ -2083,6 +2115,120 @@ shedding {
     I:erebus.zombieAnt.lexiconDisplaySize=40
     I:erebus.zombieAnt.metadata=0
     I:erebus.zombieAnt.rate=-1
+
+    # Configuration of Shedding for jurassicraft.Ankylosaurus
+    S:jurassicraft.Ankylosaurus.item=
+    I:jurassicraft.Ankylosaurus.lexiconDisplaySize=40
+    I:jurassicraft.Ankylosaurus.metadata=0
+    I:jurassicraft.Ankylosaurus.rate=-1
+
+    # Configuration of Shedding for jurassicraft.Arsinoitherium
+    S:jurassicraft.Arsinoitherium.item=
+    I:jurassicraft.Arsinoitherium.lexiconDisplaySize=40
+    I:jurassicraft.Arsinoitherium.metadata=0
+    I:jurassicraft.Arsinoitherium.rate=-1
+
+    # Configuration of Shedding for jurassicraft.Brachiosaurus
+    S:jurassicraft.Brachiosaurus.item=
+    I:jurassicraft.Brachiosaurus.lexiconDisplaySize=40
+    I:jurassicraft.Brachiosaurus.metadata=0
+    I:jurassicraft.Brachiosaurus.rate=-1
+
+    # Configuration of Shedding for jurassicraft.Carnotaurus
+    S:jurassicraft.Carnotaurus.item=
+    I:jurassicraft.Carnotaurus.lexiconDisplaySize=40
+    I:jurassicraft.Carnotaurus.metadata=0
+    I:jurassicraft.Carnotaurus.rate=-1
+
+    # Configuration of Shedding for jurassicraft.Coelacanth
+    S:jurassicraft.Coelacanth.item=
+    I:jurassicraft.Coelacanth.lexiconDisplaySize=40
+    I:jurassicraft.Coelacanth.metadata=0
+    I:jurassicraft.Coelacanth.rate=-1
+
+    # Configuration of Shedding for jurassicraft.Dilophosaurus
+    S:jurassicraft.Dilophosaurus.item=
+    I:jurassicraft.Dilophosaurus.lexiconDisplaySize=40
+    I:jurassicraft.Dilophosaurus.metadata=0
+    I:jurassicraft.Dilophosaurus.rate=-1
+
+    # Configuration of Shedding for jurassicraft.Gallimimus
+    S:jurassicraft.Gallimimus.item=
+    I:jurassicraft.Gallimimus.lexiconDisplaySize=40
+    I:jurassicraft.Gallimimus.metadata=0
+    I:jurassicraft.Gallimimus.rate=-1
+
+    # Configuration of Shedding for jurassicraft.Herrerasaurus
+    S:jurassicraft.Herrerasaurus.item=
+    I:jurassicraft.Herrerasaurus.lexiconDisplaySize=40
+    I:jurassicraft.Herrerasaurus.metadata=0
+    I:jurassicraft.Herrerasaurus.rate=-1
+
+    # Configuration of Shedding for jurassicraft.Hypsilophodon
+    S:jurassicraft.Hypsilophodon.item=
+    I:jurassicraft.Hypsilophodon.lexiconDisplaySize=40
+    I:jurassicraft.Hypsilophodon.metadata=0
+    I:jurassicraft.Hypsilophodon.rate=-1
+
+    # Configuration of Shedding for jurassicraft.Leptictidium
+    S:jurassicraft.Leptictidium.item=
+    I:jurassicraft.Leptictidium.lexiconDisplaySize=40
+    I:jurassicraft.Leptictidium.metadata=0
+    I:jurassicraft.Leptictidium.rate=-1
+
+    # Configuration of Shedding for jurassicraft.Mammoth
+    S:jurassicraft.Mammoth.item=
+    I:jurassicraft.Mammoth.lexiconDisplaySize=40
+    I:jurassicraft.Mammoth.metadata=0
+    I:jurassicraft.Mammoth.rate=-1
+
+    # Configuration of Shedding for jurassicraft.Orthacanthus
+    S:jurassicraft.Orthacanthus.item=
+    I:jurassicraft.Orthacanthus.lexiconDisplaySize=40
+    I:jurassicraft.Orthacanthus.metadata=0
+    I:jurassicraft.Orthacanthus.rate=-1
+
+    # Configuration of Shedding for jurassicraft.Parasaurolophus
+    S:jurassicraft.Parasaurolophus.item=
+    I:jurassicraft.Parasaurolophus.lexiconDisplaySize=40
+    I:jurassicraft.Parasaurolophus.metadata=0
+    I:jurassicraft.Parasaurolophus.rate=-1
+
+    # Configuration of Shedding for jurassicraft.Stegosaurus
+    S:jurassicraft.Stegosaurus.item=
+    I:jurassicraft.Stegosaurus.lexiconDisplaySize=40
+    I:jurassicraft.Stegosaurus.metadata=0
+    I:jurassicraft.Stegosaurus.rate=-1
+
+    # Configuration of Shedding for jurassicraft.Titanis
+    S:jurassicraft.Titanis.item=
+    I:jurassicraft.Titanis.lexiconDisplaySize=40
+    I:jurassicraft.Titanis.metadata=0
+    I:jurassicraft.Titanis.rate=-1
+
+    # Configuration of Shedding for jurassicraft.Triceratops
+    S:jurassicraft.Triceratops.item=
+    I:jurassicraft.Triceratops.lexiconDisplaySize=40
+    I:jurassicraft.Triceratops.metadata=0
+    I:jurassicraft.Triceratops.rate=-1
+
+    # Configuration of Shedding for jurassicraft.Tylosaurus
+    S:jurassicraft.Tylosaurus.item=
+    I:jurassicraft.Tylosaurus.lexiconDisplaySize=40
+    I:jurassicraft.Tylosaurus.metadata=0
+    I:jurassicraft.Tylosaurus.rate=-1
+
+    # Configuration of Shedding for jurassicraft.Tyrannosaurus
+    S:jurassicraft.Tyrannosaurus.item=
+    I:jurassicraft.Tyrannosaurus.lexiconDisplaySize=40
+    I:jurassicraft.Tyrannosaurus.metadata=0
+    I:jurassicraft.Tyrannosaurus.rate=-1
+
+    # Configuration of Shedding for jurassicraft.Velociraptor
+    S:jurassicraft.Velociraptor.item=
+    I:jurassicraft.Velociraptor.lexiconDisplaySize=40
+    I:jurassicraft.Velociraptor.metadata=0
+    I:jurassicraft.Velociraptor.rate=-1
 
     # Configuration of Shedding for menagerie.ant
     S:menagerie.ant.item=
