--- a/config/IguanaTinkerTweaks/BlockDefaults.cfg
+++ b/config/IguanaTinkerTweaks/BlockDefaults.cfg
@@ -570,6 +570,21 @@ blocks_axe {
     I:"JABBA:barrel:7"=1
     I:"JABBA:barrel:8"=1
     I:"JABBA:barrel:9"=1
+    I:"Mariculture:customBlock:0"=0
+    I:"Mariculture:customFlooring:0"=0
+    I:"Mariculture:customLight:0"=0
+    I:"Mariculture:customRFBlock:0"=0
+    I:"Mariculture:machines_multi_rendered:4"=0
+    I:"Mariculture:machines_single:0"=0
+    I:"Mariculture:machines_single:1"=0
+    I:"Mariculture:machines_single:2"=0
+    I:"Mariculture:machines_single:5"=0
+    I:"Mariculture:machines_single:6"=0
+    I:"Mariculture:machines_single:7"=0
+    I:"Mariculture:tanks:3"=1
+    I:"Mariculture:woods:0"=1
+    I:"Mariculture:woods:1"=2
+    I:"Mariculture:woods:2"=2
     I:"Natura:Dark Tree:1"=1
     I:"Natura:bloodwood:0"=2
     I:"Natura:bloodwood:1"=2
@@ -1378,6 +1393,66 @@ blocks_crowbar {
 
 
 blocks_null {
+    I:"Mariculture:air:0"=0
+    I:"Mariculture:air:1"=0
+    I:"Mariculture:glass:0"=0
+    I:"Mariculture:lamps_off:0"=0
+    I:"Mariculture:lamps_off:1"=0
+    I:"Mariculture:lamps_off:10"=0
+    I:"Mariculture:lamps_off:11"=0
+    I:"Mariculture:lamps_off:2"=0
+    I:"Mariculture:lamps_off:3"=0
+    I:"Mariculture:lamps_off:4"=0
+    I:"Mariculture:lamps_off:5"=0
+    I:"Mariculture:lamps_off:6"=0
+    I:"Mariculture:lamps_off:7"=0
+    I:"Mariculture:lamps_off:8"=0
+    I:"Mariculture:lamps_off:9"=0
+    I:"Mariculture:lamps_on:0"=0
+    I:"Mariculture:lamps_on:1"=0
+    I:"Mariculture:lamps_on:10"=0
+    I:"Mariculture:lamps_on:11"=0
+    I:"Mariculture:lamps_on:2"=0
+    I:"Mariculture:lamps_on:3"=0
+    I:"Mariculture:lamps_on:4"=0
+    I:"Mariculture:lamps_on:5"=0
+    I:"Mariculture:lamps_on:6"=0
+    I:"Mariculture:lamps_on:7"=0
+    I:"Mariculture:lamps_on:8"=0
+    I:"Mariculture:lamps_on:9"=0
+    I:"Mariculture:machines_single_rendered:2"=0
+    I:"Mariculture:plant_growable:0"=0
+    I:"Mariculture:plant_growable:1"=0
+    I:"Mariculture:plant_growable:10"=0
+    I:"Mariculture:plant_growable:11"=0
+    I:"Mariculture:plant_growable:12"=0
+    I:"Mariculture:plant_growable:2"=0
+    I:"Mariculture:plant_growable:3"=0
+    I:"Mariculture:plant_growable:4"=0
+    I:"Mariculture:plant_growable:5"=0
+    I:"Mariculture:plant_growable:6"=0
+    I:"Mariculture:plant_growable:7"=0
+    I:"Mariculture:plant_growable:8"=0
+    I:"Mariculture:plant_growable:9"=0
+    I:"Mariculture:plant_static:0"=0
+    I:"Mariculture:plant_static:1"=0
+    I:"Mariculture:plant_static:10"=0
+    I:"Mariculture:plant_static:11"=0
+    I:"Mariculture:plant_static:12"=0
+    I:"Mariculture:plant_static:2"=0
+    I:"Mariculture:plant_static:3"=0
+    I:"Mariculture:plant_static:4"=0
+    I:"Mariculture:plant_static:5"=0
+    I:"Mariculture:plant_static:6"=0
+    I:"Mariculture:plant_static:7"=0
+    I:"Mariculture:plant_static:8"=0
+    I:"Mariculture:plant_static:9"=0
+    I:"Mariculture:tanks:0"=0
+    I:"Mariculture:tanks:1"=0
+    I:"Mariculture:tanks:2"=0
+    I:"Mariculture:tanks:4"=0
+    I:"Mariculture:ticking:0"=0
+    I:"Mariculture:transparent:0"=0
     I:"customitems:single_item_chest:0"=0
     I:"customitems:single_item_chest:1"=0
     I:"customitems:single_item_chest:10"=0
@@ -2594,6 +2669,82 @@ blocks_pickaxe {
     I:"HardcoreEnderExpansion:stardust_ore:7"=3
     I:"HardcoreEnderExpansion:stardust_ore:8"=3
     I:"HardcoreEnderExpansion:stardust_ore:9"=3
+    I:"Mariculture:limestone:0"=0
+    I:"Mariculture:limestone:1"=0
+    I:"Mariculture:limestone:10"=0
+    I:"Mariculture:limestone:11"=0
+    I:"Mariculture:limestone:12"=0
+    I:"Mariculture:limestone:13"=0
+    I:"Mariculture:limestone:14"=0
+    I:"Mariculture:limestone:15"=0
+    I:"Mariculture:limestone:2"=0
+    I:"Mariculture:limestone:3"=0
+    I:"Mariculture:limestone:4"=0
+    I:"Mariculture:limestone:5"=0
+    I:"Mariculture:limestone:6"=0
+    I:"Mariculture:limestone:7"=0
+    I:"Mariculture:limestone:8"=0
+    I:"Mariculture:limestone:9"=0
+    I:"Mariculture:machines_multi:0"=2
+    I:"Mariculture:machines_multi:1"=2
+    I:"Mariculture:machines_multi:2"=2
+    I:"Mariculture:machines_multi_rendered:0"=2
+    I:"Mariculture:machines_multi_rendered:1"=2
+    I:"Mariculture:machines_multi_rendered:2"=2
+    I:"Mariculture:machines_multi_rendered:3"=1
+    I:"Mariculture:machines_single:10"=2
+    I:"Mariculture:machines_single:11"=2
+    I:"Mariculture:machines_single:3"=1
+    I:"Mariculture:machines_single:4"=1
+    I:"Mariculture:machines_single:8"=2
+    I:"Mariculture:machines_single:9"=1
+    I:"Mariculture:machines_single_rendered:0"=1
+    I:"Mariculture:machines_single_rendered:1"=0
+    I:"Mariculture:machines_single_rendered:10"=0
+    I:"Mariculture:machines_single_rendered:11"=0
+    I:"Mariculture:machines_single_rendered:3"=1
+    I:"Mariculture:machines_single_rendered:4"=0
+    I:"Mariculture:machines_single_rendered:5"=1
+    I:"Mariculture:machines_single_rendered:6"=1
+    I:"Mariculture:machines_single_rendered:7"=2
+    I:"Mariculture:machines_single_rendered:8"=0
+    I:"Mariculture:machines_single_rendered:9"=0
+    I:"Mariculture:metals:0"=1
+    I:"Mariculture:metals:1"=1
+    I:"Mariculture:metals:2"=2
+    I:"Mariculture:metals:3"=0
+    I:"Mariculture:metals:4"=7
+    I:"Mariculture:metals:5"=1
+    I:"Mariculture:pearl_block:0"=1
+    I:"Mariculture:pearl_block:1"=1
+    I:"Mariculture:pearl_block:10"=1
+    I:"Mariculture:pearl_block:11"=1
+    I:"Mariculture:pearl_block:2"=1
+    I:"Mariculture:pearl_block:3"=1
+    I:"Mariculture:pearl_block:4"=1
+    I:"Mariculture:pearl_block:5"=1
+    I:"Mariculture:pearl_block:6"=1
+    I:"Mariculture:pearl_block:7"=1
+    I:"Mariculture:pearl_block:8"=1
+    I:"Mariculture:pearl_block:9"=1
+    I:"Mariculture:pearl_brick:0"=1
+    I:"Mariculture:pearl_brick:1"=1
+    I:"Mariculture:pearl_brick:10"=1
+    I:"Mariculture:pearl_brick:11"=1
+    I:"Mariculture:pearl_brick:2"=1
+    I:"Mariculture:pearl_brick:3"=1
+    I:"Mariculture:pearl_brick:4"=1
+    I:"Mariculture:pearl_brick:5"=1
+    I:"Mariculture:pearl_brick:6"=1
+    I:"Mariculture:pearl_brick:7"=1
+    I:"Mariculture:pearl_brick:8"=1
+    I:"Mariculture:pearl_brick:9"=1
+    I:"Mariculture:rocks:0"=1
+    I:"Mariculture:rocks:1"=1
+    I:"Mariculture:rocks:2"=1
+    I:"Mariculture:rocks:3"=2
+    I:"Mariculture:rocks:4"=2
+    I:"Mariculture:water:0"=1
     I:"Mekanism:BasicBlock:0"=3
     I:"Mekanism:BasicBlock:12"=1
     I:"Mekanism:BasicBlock:13"=3
@@ -5732,6 +5883,173 @@ blocks_pickaxe {
     I:"erebus:waspSpawner:7"=0
     I:"erebus:waspSpawner:8"=0
     I:"erebus:waspSpawner:9"=0
+    I:"jurassicraft:tile.amber_ore:0"=2
+    I:"jurassicraft:tile.amber_ore:1"=2
+    I:"jurassicraft:tile.amber_ore:10"=2
+    I:"jurassicraft:tile.amber_ore:11"=2
+    I:"jurassicraft:tile.amber_ore:12"=2
+    I:"jurassicraft:tile.amber_ore:13"=2
+    I:"jurassicraft:tile.amber_ore:14"=2
+    I:"jurassicraft:tile.amber_ore:15"=2
+    I:"jurassicraft:tile.amber_ore:2"=2
+    I:"jurassicraft:tile.amber_ore:3"=2
+    I:"jurassicraft:tile.amber_ore:4"=2
+    I:"jurassicraft:tile.amber_ore:5"=2
+    I:"jurassicraft:tile.amber_ore:6"=2
+    I:"jurassicraft:tile.amber_ore:7"=2
+    I:"jurassicraft:tile.amber_ore:8"=2
+    I:"jurassicraft:tile.amber_ore:9"=2
+    I:"jurassicraft:tile.block_Gypsum_Block:0"=1
+    I:"jurassicraft:tile.block_Gypsum_Block:1"=1
+    I:"jurassicraft:tile.block_Gypsum_Block:10"=1
+    I:"jurassicraft:tile.block_Gypsum_Block:11"=1
+    I:"jurassicraft:tile.block_Gypsum_Block:12"=1
+    I:"jurassicraft:tile.block_Gypsum_Block:13"=1
+    I:"jurassicraft:tile.block_Gypsum_Block:14"=1
+    I:"jurassicraft:tile.block_Gypsum_Block:15"=1
+    I:"jurassicraft:tile.block_Gypsum_Block:2"=1
+    I:"jurassicraft:tile.block_Gypsum_Block:3"=1
+    I:"jurassicraft:tile.block_Gypsum_Block:4"=1
+    I:"jurassicraft:tile.block_Gypsum_Block:5"=1
+    I:"jurassicraft:tile.block_Gypsum_Block:6"=1
+    I:"jurassicraft:tile.block_Gypsum_Block:7"=1
+    I:"jurassicraft:tile.block_Gypsum_Block:8"=1
+    I:"jurassicraft:tile.block_Gypsum_Block:9"=1
+    I:"jurassicraft:tile.block_Gypsum_Brick:0"=1
+    I:"jurassicraft:tile.block_Gypsum_Brick:1"=1
+    I:"jurassicraft:tile.block_Gypsum_Brick:10"=1
+    I:"jurassicraft:tile.block_Gypsum_Brick:11"=1
+    I:"jurassicraft:tile.block_Gypsum_Brick:12"=1
+    I:"jurassicraft:tile.block_Gypsum_Brick:13"=1
+    I:"jurassicraft:tile.block_Gypsum_Brick:14"=1
+    I:"jurassicraft:tile.block_Gypsum_Brick:15"=1
+    I:"jurassicraft:tile.block_Gypsum_Brick:2"=1
+    I:"jurassicraft:tile.block_Gypsum_Brick:3"=1
+    I:"jurassicraft:tile.block_Gypsum_Brick:4"=1
+    I:"jurassicraft:tile.block_Gypsum_Brick:5"=1
+    I:"jurassicraft:tile.block_Gypsum_Brick:6"=1
+    I:"jurassicraft:tile.block_Gypsum_Brick:7"=1
+    I:"jurassicraft:tile.block_Gypsum_Brick:8"=1
+    I:"jurassicraft:tile.block_Gypsum_Brick:9"=1
+    I:"jurassicraft:tile.block_Gypsum_CobbleStone:0"=0
+    I:"jurassicraft:tile.block_Gypsum_CobbleStone:1"=0
+    I:"jurassicraft:tile.block_Gypsum_CobbleStone:10"=0
+    I:"jurassicraft:tile.block_Gypsum_CobbleStone:11"=0
+    I:"jurassicraft:tile.block_Gypsum_CobbleStone:12"=0
+    I:"jurassicraft:tile.block_Gypsum_CobbleStone:13"=0
+    I:"jurassicraft:tile.block_Gypsum_CobbleStone:14"=0
+    I:"jurassicraft:tile.block_Gypsum_CobbleStone:15"=0
+    I:"jurassicraft:tile.block_Gypsum_CobbleStone:2"=0
+    I:"jurassicraft:tile.block_Gypsum_CobbleStone:3"=0
+    I:"jurassicraft:tile.block_Gypsum_CobbleStone:4"=0
+    I:"jurassicraft:tile.block_Gypsum_CobbleStone:5"=0
+    I:"jurassicraft:tile.block_Gypsum_CobbleStone:6"=0
+    I:"jurassicraft:tile.block_Gypsum_CobbleStone:7"=0
+    I:"jurassicraft:tile.block_Gypsum_CobbleStone:8"=0
+    I:"jurassicraft:tile.block_Gypsum_CobbleStone:9"=0
+    I:"jurassicraft:tile.fossil_clay_ore:0"=2
+    I:"jurassicraft:tile.fossil_clay_ore:1"=2
+    I:"jurassicraft:tile.fossil_clay_ore:2"=2
+    I:"jurassicraft:tile.fossil_clay_ore:3"=2
+    I:"jurassicraft:tile.fossil_clay_ore:4"=2
+    I:"jurassicraft:tile.fossil_clay_ore:5"=2
+    I:"jurassicraft:tile.fossil_clay_ore:6"=2
+    I:"jurassicraft:tile.fossil_ore:0"=2
+    I:"jurassicraft:tile.fossil_ore:1"=2
+    I:"jurassicraft:tile.fossil_ore:10"=2
+    I:"jurassicraft:tile.fossil_ore:11"=2
+    I:"jurassicraft:tile.fossil_ore:12"=2
+    I:"jurassicraft:tile.fossil_ore:13"=2
+    I:"jurassicraft:tile.fossil_ore:14"=2
+    I:"jurassicraft:tile.fossil_ore:15"=2
+    I:"jurassicraft:tile.fossil_ore:2"=2
+    I:"jurassicraft:tile.fossil_ore:3"=2
+    I:"jurassicraft:tile.fossil_ore:4"=2
+    I:"jurassicraft:tile.fossil_ore:5"=2
+    I:"jurassicraft:tile.fossil_ore:6"=2
+    I:"jurassicraft:tile.fossil_ore:7"=2
+    I:"jurassicraft:tile.fossil_ore:8"=2
+    I:"jurassicraft:tile.fossil_ore:9"=2
+    I:"jurassicraft:tile.fossil_sandstone_ore:0"=2
+    I:"jurassicraft:tile.fossil_sandstone_ore:1"=2
+    I:"jurassicraft:tile.fossil_sandstone_ore:10"=2
+    I:"jurassicraft:tile.fossil_sandstone_ore:11"=2
+    I:"jurassicraft:tile.fossil_sandstone_ore:12"=2
+    I:"jurassicraft:tile.fossil_sandstone_ore:13"=2
+    I:"jurassicraft:tile.fossil_sandstone_ore:14"=2
+    I:"jurassicraft:tile.fossil_sandstone_ore:15"=2
+    I:"jurassicraft:tile.fossil_sandstone_ore:2"=2
+    I:"jurassicraft:tile.fossil_sandstone_ore:3"=2
+    I:"jurassicraft:tile.fossil_sandstone_ore:4"=2
+    I:"jurassicraft:tile.fossil_sandstone_ore:5"=2
+    I:"jurassicraft:tile.fossil_sandstone_ore:6"=2
+    I:"jurassicraft:tile.fossil_sandstone_ore:7"=2
+    I:"jurassicraft:tile.fossil_sandstone_ore:8"=2
+    I:"jurassicraft:tile.fossil_sandstone_ore:9"=2
+    I:"jurassicraft:tile.low_Security_Fence_Base:0"=2
+    I:"jurassicraft:tile.low_Security_Fence_Base:1"=2
+    I:"jurassicraft:tile.low_Security_Fence_Base:10"=2
+    I:"jurassicraft:tile.low_Security_Fence_Base:11"=2
+    I:"jurassicraft:tile.low_Security_Fence_Base:12"=2
+    I:"jurassicraft:tile.low_Security_Fence_Base:13"=2
+    I:"jurassicraft:tile.low_Security_Fence_Base:14"=2
+    I:"jurassicraft:tile.low_Security_Fence_Base:15"=2
+    I:"jurassicraft:tile.low_Security_Fence_Base:2"=2
+    I:"jurassicraft:tile.low_Security_Fence_Base:3"=2
+    I:"jurassicraft:tile.low_Security_Fence_Base:4"=2
+    I:"jurassicraft:tile.low_Security_Fence_Base:5"=2
+    I:"jurassicraft:tile.low_Security_Fence_Base:6"=2
+    I:"jurassicraft:tile.low_Security_Fence_Base:7"=2
+    I:"jurassicraft:tile.low_Security_Fence_Base:8"=2
+    I:"jurassicraft:tile.low_Security_Fence_Base:9"=2
+    I:"jurassicraft:tile.low_Security_Fence_Grid:0"=2
+    I:"jurassicraft:tile.low_Security_Fence_Grid:1"=2
+    I:"jurassicraft:tile.low_Security_Fence_Grid:10"=2
+    I:"jurassicraft:tile.low_Security_Fence_Grid:11"=2
+    I:"jurassicraft:tile.low_Security_Fence_Grid:12"=2
+    I:"jurassicraft:tile.low_Security_Fence_Grid:13"=2
+    I:"jurassicraft:tile.low_Security_Fence_Grid:14"=2
+    I:"jurassicraft:tile.low_Security_Fence_Grid:15"=2
+    I:"jurassicraft:tile.low_Security_Fence_Grid:2"=2
+    I:"jurassicraft:tile.low_Security_Fence_Grid:3"=2
+    I:"jurassicraft:tile.low_Security_Fence_Grid:4"=2
+    I:"jurassicraft:tile.low_Security_Fence_Grid:5"=2
+    I:"jurassicraft:tile.low_Security_Fence_Grid:6"=2
+    I:"jurassicraft:tile.low_Security_Fence_Grid:7"=2
+    I:"jurassicraft:tile.low_Security_Fence_Grid:8"=2
+    I:"jurassicraft:tile.low_Security_Fence_Grid:9"=2
+    I:"jurassicraft:tile.low_Security_Fence_Main:0"=2
+    I:"jurassicraft:tile.low_Security_Fence_Main:1"=2
+    I:"jurassicraft:tile.low_Security_Fence_Main:10"=2
+    I:"jurassicraft:tile.low_Security_Fence_Main:11"=2
+    I:"jurassicraft:tile.low_Security_Fence_Main:12"=2
+    I:"jurassicraft:tile.low_Security_Fence_Main:13"=2
+    I:"jurassicraft:tile.low_Security_Fence_Main:14"=2
+    I:"jurassicraft:tile.low_Security_Fence_Main:15"=2
+    I:"jurassicraft:tile.low_Security_Fence_Main:2"=2
+    I:"jurassicraft:tile.low_Security_Fence_Main:3"=2
+    I:"jurassicraft:tile.low_Security_Fence_Main:4"=2
+    I:"jurassicraft:tile.low_Security_Fence_Main:5"=2
+    I:"jurassicraft:tile.low_Security_Fence_Main:6"=2
+    I:"jurassicraft:tile.low_Security_Fence_Main:7"=2
+    I:"jurassicraft:tile.low_Security_Fence_Main:8"=2
+    I:"jurassicraft:tile.low_Security_Fence_Main:9"=2
+    I:"jurassicraft:tile.low_Security_Fence_Pole:0"=2
+    I:"jurassicraft:tile.low_Security_Fence_Pole:1"=2
+    I:"jurassicraft:tile.low_Security_Fence_Pole:10"=2
+    I:"jurassicraft:tile.low_Security_Fence_Pole:11"=2
+    I:"jurassicraft:tile.low_Security_Fence_Pole:12"=2
+    I:"jurassicraft:tile.low_Security_Fence_Pole:13"=2
+    I:"jurassicraft:tile.low_Security_Fence_Pole:14"=2
+    I:"jurassicraft:tile.low_Security_Fence_Pole:15"=2
+    I:"jurassicraft:tile.low_Security_Fence_Pole:2"=2
+    I:"jurassicraft:tile.low_Security_Fence_Pole:3"=2
+    I:"jurassicraft:tile.low_Security_Fence_Pole:4"=2
+    I:"jurassicraft:tile.low_Security_Fence_Pole:5"=2
+    I:"jurassicraft:tile.low_Security_Fence_Pole:6"=2
+    I:"jurassicraft:tile.low_Security_Fence_Pole:7"=2
+    I:"jurassicraft:tile.low_Security_Fence_Pole:8"=2
+    I:"jurassicraft:tile.low_Security_Fence_Pole:9"=2
     I:"magicalcrops:magicalcrops_MinicioOre:0"=2
     I:"magicalcrops:magicalcrops_MinicioOre:1"=2
     I:"magicalcrops:magicalcrops_MinicioOre:10"=2
@@ -5780,6 +6098,7 @@ blocks_pickaxe {
     I:"magicalcrops:magicalcrops_MinicioOreNether:7"=2
     I:"magicalcrops:magicalcrops_MinicioOreNether:8"=2
     I:"magicalcrops:magicalcrops_MinicioOreNether:9"=2
+    I:"minechem:tile.oreUranium:0"=6
     I:"minecraft:coal_block:0"=1
     I:"minecraft:coal_ore:0"=1
     I:"minecraft:coal_ore:1"=0
@@ -6640,6 +6959,8 @@ blocks_shovel {
     I:"HardcoreEnderExpansion:persegrit:7"=0
     I:"HardcoreEnderExpansion:persegrit:8"=0
     I:"HardcoreEnderExpansion:persegrit:9"=0
+    I:"Mariculture:sands:0"=0
+    I:"Mariculture:sands:1"=1
     I:"Natura:heatsand:0"=0
     I:"Natura:heatsand:1"=0
     I:"Natura:heatsand:10"=0
