--- a/config/IguanaTinkerTweaks/MaterialDefaults.cfg
+++ b/config/IguanaTinkerTweaks/MaterialDefaults.cfg
@@ -782,6 +782,42 @@ materials {
         D:xpAmount=1.0
     }
 
+    titanium {
+        I:attack=2
+        S:color=gray
+        I:durability=520
+        D:handleModifier=1.5
+        I:harvestLevel=6
+        I:miningSpeed=1500
+        I:reinforced=2
+        D:shoddy=0.0
+        D:xpAmount=1.0
+    }
+
+    unstableingot {
+        I:attack=2
+        S:color=white
+        I:durability=80
+        D:handleModifier=0.6000000238418579
+        I:harvestLevel=6
+        I:miningSpeed=700
+        I:reinforced=4
+        D:shoddy=0.0
+        D:xpAmount=1.0
+    }
+
+    magicwood {
+        I:attack=0
+        S:color=yellow
+        I:durability=78
+        D:handleModifier=1.0
+        I:harvestLevel=0
+        I:miningSpeed=150
+        I:reinforced=0
+        D:shoddy=0.0
+        D:xpAmount=1.0
+    }
+
 }
 
 
