--- a/config/IguanaTinkerTweaks/ToolDefaults.cfg
+++ b/config/IguanaTinkerTweaks/ToolDefaults.cfg
@@ -412,6 +412,15 @@ magicalcrops {
 }
 
 
+mariculture {
+
+    hammer {
+        I:pickaxe=0
+    }
+
+}
+
+
 mekanismtools {
 
     bronzepaxel {
@@ -550,6 +559,15 @@ mekanismtools {
 
     steelaxe {
         I:axe=5
+    }
+
+}
+
+
+minechem {
+
+    minechempolytool {
+        I:pickaxe=3
     }
 
 }
