--- a/config/LatMod/LatCoreMC.cfg
+++ b/config/LatMod/LatCoreMC.cfg
@@ -26,9 +26,10 @@ client {
 
 general {
     #  [default: true]
-    B:allowCreativeInteractSecure=true
+    B:addCommandAlias=true
 
-    #  [default: false]
+    #  [default: true]
+    B:allowCreativeInteractSecure=true
     B:disableLMFriendsCommand=false
 
     #  [default: false]
