--- a/config/Mekanism.cfg
+++ b/config/Mekanism.cfg
@@ -16,8 +16,11 @@ client {
 
 
 general {
+    B:AestheticWorldDamage=true
     B:AllowSpawnerBoxPickup=true
     I:AmbientLightingLevel=15
+    I:ArmoredJepackDamageMax=115
+    D:ArmoredJetpackDamageRatio=0.8
     B:BlacklistIC2Power=true
     B:BlacklistRFPower=true
     I:ClientUpdateDelay=10
@@ -44,6 +47,7 @@ general {
     I:MinerSilkMultiplier=6
     I:ObsidianTNTBlastRadius=12
     I:ObsidianTNTDelay=100
+    B:OpsBypassRestrictions=true
     I:OsmiumPerChunk=0
     B:PrefilledPortableTanks=true
     D:RFToJoules=0
