--- a/config/PotionExtension.cfg
+++ b/config/PotionExtension.cfg
@@ -3,6 +3,9 @@
 general {
     # check conflicting of Potion ID
     B:checkPotion=true
+
+    # Not Recommended to set over 127
+    I:maxPotionArray=128
 }
 
 
