--- a/config/StorageDrawers.cfg
+++ b/config/StorageDrawers.cfg
@@ -1,5 +1,12 @@
 # Configuration file
 
+addons {
+    B:showBlocksInCreative=true
+    B:showBlocksInNEI=true
+    B:useSeparateCreativeTabs=true
+}
+
+
 blocks {
 
     fulldrawers2 {
@@ -59,9 +66,11 @@ general {
 
     # Writes additional log messages while using the mod.  Mainly for debug purposes.  Should be kept disabled unless instructed otherwise.
     B:enableDebugLogging=false
+    B:enableDrawerUI=true
     B:enableIndicatorUpgrades=true
     B:enableItemConversion=true
     B:enableLockUpgrades=true
+    B:enableShroudUpgrades=true
     B:enableSidedInput=true
     B:enableSidedOutput=true
     B:enableSortingUpgrades=true
