--- a/config/Waila.cfg
+++ b/config/Waila.cfg
@@ -51,6 +51,8 @@ modules {
     B:bb.space=true
     B:bc.tankamount=true
     B:bc.tanktype=true
+    B:bca.duster.progress.graphical=true
+    B:bca.duster.progress.textual=false
     B:computronics.enableDriveState=true
     B:computronics.enableLampColor=true
     B:computronics.enableOCAddress=true
@@ -132,6 +134,8 @@ server_forcing {
     B:bb.space=false
     B:bc.tankamount=false
     B:bc.tanktype=false
+    B:bca.duster.progress.graphical=false
+    B:bca.duster.progress.textual=false
     B:computronics.enableDriveState=false
     B:computronics.enableLampColor=false
     B:computronics.enableOCAddress=false
