--- a/config/atg/biome_modifiers.cfg
+++ b/config/atg/biome_modifiers.cfg
@@ -236,6 +236,18 @@
         D:OccuranceMultiplier=1.0
     }
 
+    MushroomIsland {
+        B:AllowVillages=true
+        B:Enable=true
+        D:OccuranceMultiplier=1.0
+    }
+
+    MushroomIslandShore {
+        B:AllowVillages=true
+        B:Enable=true
+        D:OccuranceMultiplier=1.0
+    }
+
 }
 
 
@@ -1057,6 +1069,17 @@ Thaumcraft {
     }
 
     Eldritch {
+        B:AllowVillages=true
+        B:Enable=true
+        D:OccuranceMultiplier=1.0
+    }
+
+}
+
+
+ThaumicHorizons {
+
+    "Pocket Plane" {
         B:AllowVillages=true
         B:Enable=true
         D:OccuranceMultiplier=1.0
