--- a/config/bigtrees/individualbiomes.cfg
+++ b/config/bigtrees/individualbiomes.cfg
@@ -4258,6 +4258,37 @@
     S:"com.Atum's Desert Tall Oak Autumn"=
     S:"com.Atum's Desert Tall Oak Brown"=
     S:"com.Atum's Desert Yellow Big Birch"=
+    S:"com.Pocket Plane Big Birch 0"=
+    S:"com.Pocket Plane Big Birch 1"=
+    S:"com.Pocket Plane Big Pine 0"=
+    S:"com.Pocket Plane Big Pine 1"=
+    S:"com.Pocket Plane Block Maple"=
+    S:"com.Pocket Plane Block Oak 0"=
+    S:"com.Pocket Plane Block Oak Autumn"=
+    S:"com.Pocket Plane Block Oak Brown"=
+    S:"com.Pocket Plane Block Oak Dark"=
+    S:"com.Pocket Plane Cyprus Oak 0"=
+    S:"com.Pocket Plane Cyprus Willow"=
+    S:"com.Pocket Plane Dark Hat"=
+    S:"com.Pocket Plane Dead Tree 0"=
+    S:"com.Pocket Plane Great Oak 0"=
+    S:"com.Pocket Plane Great Oak Autumn"=
+    S:"com.Pocket Plane Great Oak Brown"=
+    S:"com.Pocket Plane Great Oak Dark"=
+    S:"com.Pocket Plane Hat Sacred Tree"=
+    S:"com.Pocket Plane Hat Tree 0"=
+    S:"com.Pocket Plane Pertrified Dead Tree"=
+    S:"com.Pocket Plane Swamp Oak 0"=
+    S:"com.Pocket Plane Tall Cherry"=
+    S:"com.Pocket Plane Tall Dark Oak"=
+    S:"com.Pocket Plane Tall Fir"=
+    S:"com.Pocket Plane Tall Jacaranda"=
+    S:"com.Pocket Plane Tall Magic Tree"=
+    S:"com.Pocket Plane Tall Maple"=
+    S:"com.Pocket Plane Tall Oak 0"=
+    S:"com.Pocket Plane Tall Oak Autumn"=
+    S:"com.Pocket Plane Tall Oak Brown"=
+    S:"com.Pocket Plane Yellow Big Birch"=
     S:"drzhark.WyvernBiome Big Birch 0"=
     S:"drzhark.WyvernBiome Big Birch 1"=
     S:"drzhark.WyvernBiome Big Pine 0"=
