--- a/config/biomesoplenty/biomegen.cfg
+++ b/config/biomesoplenty/biomegen.cfg
@@ -112,7 +112,7 @@
     B:"Mega Taiga"=true
     B:"Mesa Plateau"=true
     B:"Mesa Plateau F"=true
-    B:"Mushroom Island"=true
+    B:"Mushroom Island"=false
     B:Ocean=true
 }
 
@@ -136,8 +136,8 @@
     B:Mesa=true
     B:"Mesa Plateau"=true
     B:"Mesa Plateau F"=true
-    B:MushroomIsland=true
-    B:MushroomIslandShore=true
+    B:MushroomIsland=false
+    B:MushroomIslandShore=false
     B:Ocean=true
     B:Plains=true
     B:River=true
