--- a/config/buildcraft/main.conf
+++ b/config/buildcraft/main.conf
@@ -45,7 +45,7 @@ general {
     B:dropBrokenBlocks=true
 
     # Do engines explode upon overheat?
-    B:enginesExplode=false
+    B:enginesExplode=true
 
     # Blocks listed here will not have facades created. The format is modid:blockname.
     # For mods with a | character, the value needs to be surrounded with quotes.
@@ -174,7 +174,7 @@ general {
 
     # set to true for version check on startup
     B:update.check=false
-    S:version=6.4.15
+    S:version=6.4.16
 }
 
 
