--- a/config/cofh/thermalfoundation/common.cfg
+++ b/config/cofh/thermalfoundation/common.cfg
@@ -2,13 +2,13 @@
 
 Equipment {
     # Set to TRUE to disable ALL armor sets.
-    B:DisableAllArmor=false
+    B:DisableAllArmor=true
 
     # Set to TRUE to disable ALL tool sets.
-    B:DisableAllTools=false
+    B:DisableAllTools=true
 
     # Set to FALSE to hide all disabled equipment from the Creative Tabs and NEI.
-    B:ShowDisabledEquipment=true
+    B:ShowDisabledEquipment=false
 
     Copper {
         B:Armor=true
