--- a/config/iChunUtil_Stats.cfg
+++ b/config/iChunUtil_Stats.cfg
@@ -8,7 +8,7 @@
 
 stats {
     # Don't change this.
-    S:statsData=
+    S:statsData=f+Su !qHHa}eUA\D&Db.
 
     # Don't change this.
     S:statsIdentifier=9,[fM6M"@/a%v{8;FL`<
