--- a/config/buildcraft/compat.cfg
+++ b/config/buildcraft/compat.cfg
@@ -2,12 +2,44 @@
 
 compat {
     B:enableMFR=true
-
-    # ForgeMultipart schematic integration. [default: true]
     B:enableMultipart=true
-
-    # NEI recipe and ledger integration. [default: true]
     B:enableNEI=true
+}
+
+
+modules {
+    # null [default: true]
+    B:AppleMilkTea2=true
+
+    # null [default: true]
+    B:BinnieMods=true
+
+    # null [default: true]
+    B:CarpentersBlocks=true
+
+    # null [default: true]
+    B:EnderIO=true
+
+    # null [default: true]
+    B:Forestry=true
+
+    # null [default: true]
+    B:ForgeMultipart=true
+
+    # null [default: true]
+    B:IronChest=true
+
+    # null [default: true]
+    B:MineTweaker3=true
+
+    # null [default: true]
+    B:NotEnoughItems=true
+
+    # null [default: true]
+    B:Railcraft=true
+
+    # null [default: true]
+    B:Waila=true
 }
 
 
