--- a/config/eirairc/client.cfg
+++ b/config/eirairc/client.cfg
@@ -27,6 +27,9 @@ compatibility {
 ##########################################################################################################
 
 general {
+    # Auto Reset Chat
+    B:autoResetChat=false
+
     # Persistent Connection
     B:persistentConnection=true
 
