--- a/config/minechem.cfg
+++ b/config/minechem.cfg
@@ -20,6 +20,9 @@ blacklist {
         minecraft:diamond
         ore:ore*
         *:dragon_egg
+		*RotaryCraft*
+		*ElectriCraft*
+		*ReactorCraft*
      >
 }
 
@@ -83,16 +86,16 @@ general {
 
 power {
     # Energy used to decompose an item
-    I:costDecomposition=1000
+    I:costDecomposition=10000
 
     # Multiplier for calculating fission cost
-    I:costFissionMultiplier=100
+    I:costFissionMultiplier=1000
 
     # Multiplier for calculating fusion cost
-    I:costFusionMultiplier=100
+    I:costFusionMultiplier=1000
 
     # Multiplier for calculating synthesis cost
-    I:costSythesisMultiplier=10
+    I:costSythesisMultiplier=100
 
     # Should machines require power
     B:enable=true
