--- a/config/railcraft/blocks.cfg
+++ b/config/railcraft/blocks.cfg
@@ -108,7 +108,7 @@ subblocks {
     B:machine.beta.chest.metals=true
     B:machine.beta.chest.void=true
     B:machine.beta.engine.steam.high=true
-    B:machine.beta.engine.steam.hobby=false
+    B:machine.beta.engine.steam.hobby=true
     B:machine.beta.engine.steam.low=true
     B:machine.beta.tank.iron.gauge=true
     B:machine.beta.tank.iron.valve=true
