--- a/config/DIAdvancedCompatibility.cfg
+++ b/config/DIAdvancedCompatibility.cfg
@@ -5135,12 +5135,12 @@ extrabiomesxl {
     }
 
     ##########################################################################################################
-    # holstaurus
+    # ender girl
     #--------------------------------------------------------------------------------------------------------#
     # These settings are to help other modders and users to make custom mobs fit correctly in the preview window.
     ##########################################################################################################
 
-    holstaurus {
+    "ender girl" {
         # Append Baby to this entity type if it is a baby.
         B:Append_Baby_Name=true
 
@@ -5167,12 +5167,12 @@ extrabiomesxl {
     }
 
     ##########################################################################################################
-    # ender girl
+    # holstaurus
     #--------------------------------------------------------------------------------------------------------#
     # These settings are to help other modders and users to make custom mobs fit correctly in the preview window.
     ##########################################################################################################
 
-    "ender girl" {
+    holstaurus {
         # Append Baby to this entity type if it is a baby.
         B:Append_Baby_Name=true
 
@@ -6975,6 +6975,22 @@ openblocks {
 }
 
 
+portalgun {
+
+    portalentityturret {
+        B:Append_Baby_Name=true
+        S:Baby_Scale_Modifier=2.0
+        B:Ignore_This_Mob=false
+        S:Name=
+        S:Scale_Factor=22.0
+        S:Size_Modifier=0.0
+        S:X_Offset=0.0
+        S:Y_Offset=-5.0
+    }
+
+}
+
+
 "random things" {
 
     ##########################################################################################################
@@ -8567,38 +8583,6 @@ thaumcraft {
     }
 
     ##########################################################################################################
-    # mercurialslime
-    #--------------------------------------------------------------------------------------------------------#
-    # These settings are to help other modders and users to make custom mobs fit correctly in the preview window.
-    ##########################################################################################################
-
-    mercurialslime {
-        # Append Baby to this entity type if it is a baby.
-        B:Append_Baby_Name=true
-
-        # If and how much to scale the mob is a baby.
-        D:Baby_Scale_Modifier=2.0
-
-        # Should the portrait display should ignore this entity entirely?
-        B:Ignore_This_Mob=false
-
-        # Entities Name to use if overriden.
-        S:Name=
-
-        # How much to upscale the mob. 0 will cause it to disappear entirely. 22 is OK for most mobs
-        S:Scale_Factor=22.0
-
-        # If and how much to scale the mob is it has a size modifier(like slimes)
-        S:Size_Modifier=0.0
-
-        # How much to nudge the mob display horizontally. 0 is default, negative numbers to move left, positive for right.
-        S:X_Offset=0.0
-
-        # How much to nudge the mob display vertically. 0 is default, negative numbers to move up, positive for down.
-        S:Y_Offset=-5.0
-    }
-
-    ##########################################################################################################
     # meatslime
     #--------------------------------------------------------------------------------------------------------#
     # These settings are to help other modders and users to make custom mobs fit correctly in the preview window.
@@ -8637,6 +8621,38 @@ thaumcraft {
     ##########################################################################################################
 
     nightmareth {
+        # Append Baby to this entity type if it is a baby.
+        B:Append_Baby_Name=true
+
+        # If and how much to scale the mob is a baby.
+        D:Baby_Scale_Modifier=2.0
+
+        # Should the portrait display should ignore this entity entirely?
+        B:Ignore_This_Mob=false
+
+        # Entities Name to use if overriden.
+        S:Name=
+
+        # How much to upscale the mob. 0 will cause it to disappear entirely. 22 is OK for most mobs
+        S:Scale_Factor=22.0
+
+        # If and how much to scale the mob is it has a size modifier(like slimes)
+        S:Size_Modifier=0.0
+
+        # How much to nudge the mob display horizontally. 0 is default, negative numbers to move left, positive for right.
+        S:X_Offset=0.0
+
+        # How much to nudge the mob display vertically. 0 is default, negative numbers to move up, positive for down.
+        S:Y_Offset=-5.0
+    }
+
+    ##########################################################################################################
+    # mercurialslime
+    #--------------------------------------------------------------------------------------------------------#
+    # These settings are to help other modders and users to make custom mobs fit correctly in the preview window.
+    ##########################################################################################################
+
+    mercurialslime {
         # Append Baby to this entity type if it is a baby.
         B:Append_Baby_Name=true
 
